--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       .text-preset-3 {
         font-family: "Figtree", sans-serif;
         font-weight: 500;
-        font-size: 0, 875em;
+        font-size: 0.875em;
         line-height: 1.5;
         word-spacing: 0;
       }
@@ -64,7 +64,7 @@
       .text-preset-3-bold {
         font-family: "Figtree", sans-serif;
         font-weight: 800;
-        font-size: 0, 875em;
+        font-size: 0.875em;
         line-height: 1.5;
         word-spacing: 0;
       }
