Add Responsive for mobile

--- a/index.html
+++ b/index.html
@@ -133,6 +133,32 @@
         width: 32px;
         height: 32px;
       }
+
+      @media (max-width: 480px) {
+        .text-preset-1 {
+          font-size: 1.25em;
+        }
+
+        .text-preset-2 {
+          font-size: 0.875em;
+        }
+
+        .text-preset-3 {
+          font-size: 0.75em;
+        }
+
+        .text-preset-3-bold {
+          font-size: 0.75em;
+        }
+
+        article {
+          width: 279px;
+        }
+
+        article .illustration-img {
+          width: 279px;
+        }
+      }
     </style>
   </head>
   <body>
