Change em into rem

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       .text-preset-1 {
         font-family: "Figtree", sans-serif;
         font-weight: 800;
-        font-size: 1.5em;
+        font-size: 1.5rem;
         line-height: 1.5;
         word-spacing: 0;
       }
@@ -48,7 +48,7 @@
       .text-preset-2 {
         font-family: "Figtree", sans-serif;
         font-weight: 500;
-        font-size: 1em;
+        font-size: 1rem;
         line-height: 1.5;
         word-spacing: 0;
       }
@@ -56,7 +56,7 @@
       .text-preset-3 {
         font-family: "Figtree", sans-serif;
         font-weight: 500;
-        font-size: 0.875em;
+        font-size: 0.875rem;
         line-height: 1.5;
         word-spacing: 0;
       }
@@ -64,7 +64,7 @@
       .text-preset-3-bold {
         font-family: "Figtree", sans-serif;
         font-weight: 800;
-        font-size: 0.875em;
+        font-size: 0.875rem;
         line-height: 1.5;
         word-spacing: 0;
       }
@@ -136,19 +136,19 @@
 
       @media (max-width: 480px) {
         .text-preset-1 {
-          font-size: 1.25em;
+          font-size: 1.25rem;
         }
 
         .text-preset-2 {
-          font-size: 0.875em;
+          font-size: 0.875rem;
         }
 
         .text-preset-3 {
-          font-size: 0.75em;
+          font-size: 0.75rem;
         }
 
         .text-preset-3-bold {
-          font-size: 0.75em;
+          font-size: 0.75rem;
         }
 
         article {
